packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_astral_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 5,
    "width": 65.84,
    "height": 44.8,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      12,
      25
    ],
    "items": 10,
    "width": 35.76,
    "height": 104.32,
    "x": 0.0,
    "y": 62.72
  },
  {
    "range": [
      27,
      43
    ],
    "items": 5,
    "width": 46.72,
    "height": 89.6,
    "x": 0.0,
    "y": 185.6
  }
]
