packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_block_comment_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 19,
      "end": 20
    },
    "severity": "warning",
    "message": "unclosed block comment; inserted `*/`",
    "hints": []
  }
]
