packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_content_block_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      16
    ],
    "items": 2,
    "width": 46.8,
    "height": 22.4,
    "x": 0.0,
    "y": 39.68
  },
  {
    "range": [
      18,
      45
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 80.0
  }
]
